# powershell

./: !Skriptik.ps1  .emmyrc.json  .gitignore  .luarc.json  CLAUDE.md  Check-MenuBehavior.ps1  Microsoft.PowerShell_profile.ps1  Nvidia.ps1  PowerShellProfile.ps1  free-ukraine-debug.omp.yaml  free-ukraine-hack.omp.yaml  kali-tools-overview.md  kitty.conf  main.lua  ohmyposh_ukraine_claude.json  package.json  powershell.config.json  pyproject.toml  redis-diag.ps1  server.lua  ua-gpt.omp.yaml  ua-mini.omp.json  ultra.omp.toml  ultraultra.omp.toml  wezterm.lua
.gemini/: settings.json
Modules/GradientMenu/: GradientMenu.psm1
Modules/SecurityWatcher/: _SecurityWatcher._psd1  _SecurityWatcher._psm1
OmpThemes/: DefaultProxy.ps1  ProxyExamples.ps1
Profile/: Aliases.ps1  AnalizeModuleFunctions.ps1  AppsBrowsersMenu.ps1  BrowserTranslator.ps1  ErrorHandler.ps1  ErrorMethods.ps1  ErrorTest.ps1  ExportAstToMarkdown.ps1  GradientTable.Ps1  Helper.Ps1  InjectFinder.ps1  MenuItems.ps1  NetworkSystem.ps1  NiceColors.ps1  NiceParser.ps1  NmapScann.ps1  OmpCommands.ps1  QuickStart.ps1  Welcome.ps1  Wellcome.ps1
Profile/Error/: ErrorHandler.ps1  ErrorHandler_.ps1  ErrorTest.ps1  ExtractErrorDetails.ps1  ShowError.ps1  SmartError.ps1
Profile/Menu/: AppsBrowsersMenu.ps1  LS copy.ps1  LS.ps1  MenuItem.ps1  MenuItems.ps1  ModernMainMenu.ps1  NetworkSystem.ps1  ShowMenu.ps1  SitesMenu.ps1  Weather.ps1  Welcome.ps1
Profile/Parser/: Integrate.ps1  NiceParser.ps1  ParserFix.ps1  (+2 more)
Scripts/: NewProfile.ps1  WatcherHTML.ps1  env_variables.csv  hex-to-oklch-converter.ps1
(+93 files in other folders)
