[project]
name = "powershell"
version = "0.1.0"
description = "Powershell + Python"
authors = [
    {name = "ketov", email = "ketovnv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16",
    "rich>=14.0"
]

[project.scripts]
ps-scan = "ps_tools.cli:app"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
